fixed overflow x, add portfolio design

--- a/src/index.css
+++ b/src/index.css
@@ -16,12 +16,6 @@
 
 
 
-
-
-
-
-
-
   /* ANIMATION */
   --animate-shine: shine 5s linear infinite;
 
@@ -71,39 +65,47 @@
 
 
 #root {
-
-  /* font-family: system-ui, Arial, Avenir, Helvetica,   Arial, sans-serif; */
   font-family: 'Fira Code', monospace;
-  /* line-height: 1.5; */
-  /* font-weight: 400; */
-
-  /* color-scheme: light dark; */
-
-  /* letter-spacing: 1px; */
-
-  /* font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale; */
-
-  /* margin: 0;
-  width: 100%;
-  height: 100%;
-  position: absolute; */
+  overflow-x: hidden;
  
 
   
 }
 
+::-webkit-scrollbar{
+    width: 5px;
+   
+    
+}
+
+::-webkit-scrollbar-track{
+  background-color: none;
+  
+
+}
+
+::-webkit-scrollbar-thumb{
+  background: balck;
+  border-radius: 10px;
+  border: 1px solid #7E22CE;
+
+}
+
+
+
+
+
+
 
 html, body {
     /* height: 100%; */
     margin: 0;
-    position: relative;
+    padding: 0;
     color: rgba(255, 255, 255, 0.87);
     background-color: #141414;
- 
-  }
+
+}
+
 
 
 
